@@ -21,6 +21,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -95,6 +96,7 @@ public final class DriverLoader {
      * @return the loaded Driver
      * @throws DriverLoadException thrown if the driver cannot be loaded
      */
+    @SuppressWarnings("StringSplitter")
     public static Driver load(String className, String pathToDriver) throws DriverLoadException {
         final ClassLoader parent = ClassLoader.getSystemClassLoader();
         final List<URL> urls = new ArrayList<>();
@@ -147,14 +149,15 @@ public final class DriverLoader {
         try {
             final Class<?> c = Class.forName(className, true, loader);
             //final Class c = loader.loadClass(className);
-            final Driver driver = (Driver) c.newInstance();
+            final Driver driver = (Driver) c.getDeclaredConstructor().newInstance();
 
             //TODO add usage count so we don't de-register a driver that is in use.
             final Driver shim = new DriverShim(driver);
             //using the DriverShim to get around the fact that the DriverManager won't register a driver not in the base class path
             DriverManager.registerDriver(shim);
             return shim;
-        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | SQLException ex) {
+        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | SQLException
+                | NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException ex) {
             final String msg = String.format("Unable to load database driver '%s'", className);
             LOGGER.debug(msg, ex);
             throw new DriverLoadException(msg, ex);
